--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
 <p>This summer I went to New Bern,NC and saw an old truck.</p>
 
-<img src="old_truck.jpg">
+<img src="old_truck.jpg" alt="old truck">
 
 </body>
 
